Updated old modal with new mozid modal, page specific css to fix button overlap

--- a/media/css/firefox/dev-firstrun.less
+++ b/media/css/firefox/dev-firstrun.less
@@ -195,6 +195,10 @@
 }
 
 @media (max-width: @breakTablet) {
+    #modal .window .inner > header {
+        padding-top: 20px;
+    }
+    
     #masthead,
     .container {
         width: @breakMobileLandscape - (@gridGutterWidth * 2);
